contact us form - fixed text alignments

--- a/contact us form/style.css
+++ b/contact us form/style.css
@@ -23,7 +23,6 @@ body{
     align-items: center;
     gap: 1rem;
     border-radius: 4px;
-    text-align: justify;
 }
 .contact{
     width: 35%;
@@ -45,6 +44,8 @@ body{
     gap: .7rem;
 }
 .contact p{
+    width: 100%;
+    margin: auto;
     color: rgb(68, 68, 68);
 }
 .line{
@@ -60,12 +61,14 @@ body{
     align-items: center;
 }
 form{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.8rem;
+}
+.form>h2,p{
+    width: 100%;
+    margin: auto;
 }
 .name,.email{
     width: clamp(280px,80%,800px);
